--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
             </nav>
             <div class="cta">
-                <a href="#" class="btn">Get Started</a>
+                <a href="#" class="btn open-modal">Get Started</a>
             </div>
             <div class="toogle-btn">
                 <i class="fa-solid fa-bars"></i>
@@ -39,7 +39,7 @@
                 <a href="#benefits" class="nav-link">Benefits</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
                 <a href="#contact" class="nav-link">Contact</a>
-                <a href="#" class="nav-link">Get Started</a>
+                <a href="" class="nav-link open-modal">Get Started</a>
             </div>
         </div>
     </header>
@@ -56,7 +56,7 @@
                         tempora laborum!
                     </p>
                     <div class="buttons fade-in">
-                        <a href="#" class="btn">Get Started</a>
+                        <a href="#" class="btn open-modal">Get Started</a>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="numbers ">
@@ -79,7 +79,68 @@
                     </div>
                 </div>
                 <div class="rigth">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/hero.png" alt="hero-img">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About-->
+    <section class="about" id="about">
+        <div class="about-container">
+            <div class="about-title fade-in">
+                <h2>About Us</h2>
+            </div>
+            <div class="container">
+                <div class="about-left fade-in">
+                    <h2>Cyber<span>Tech</span>, is a new DeFi protocol by Web 3.0</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quo omnis veritatis nesciunt
+                        ab dolorum adipisci accusantium, earum consequuntur, minus ipsa doloremque nemo voluptatibus,
+                        nulla nihil odit. Repudiandae quasi tempora eveniet doloribus aliquam in blanditiis ut, illo
+                        vero! Quasi obcaecati, nisi hic atque sint tenetur optio sunt facilis temporibus sapiente?
+                    </p>
+                </div>
+                <div class="about-right fade-in">
+                    <img src="img/about.png" alt="about-img">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Benefits-->
+    <section class="benefits" id="benefits">
+        <div class="benefits-container">
+            <div class="benefits-title fade-in">
+                <h2>Benefits</h2>
+            </div>
+            <div class="cards">
+                <div class="card fade-in">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <h3>Analytics</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                </div>
+                <div class="card fade-in">
+                    <i class="fa-solid fa-shield-halved"></i>
+                    <h3>Security</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                </div>
+                <div class="card fade-in">
+                    <i class="fa-solid fa-wallet"></i>
+                    <h3>New Cryptos</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                </div>
+                <div class="card fade-in">
+                    <i class="fa-solid fa-headset"></i>
+                    <h3>Atention 24/7</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                </div>
+                <div class="card fade-in">
+                    <i class="fa-solid fa-database"></i>
+                    <h3>Cloud Database</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                </div>
+                <div class="card fade-in">
+                    <i class="fa-solid fa-server"></i>
+                    <h3>SaaS</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
                 </div>
             </div>
         </div>
@@ -121,6 +182,82 @@
             </div>
         </div>
     </footer>
+    <!-- Modal Formulario -->
+    <div class="modal" id="formModal">
+        <div class="modal-content">
+            <button class="close-modal" id="closeModal">&times;</button>
+
+            <div class="modal-header">
+                <h2>Contract our services</h2>
+                <p>Complete the form below to get started</p>
+            </div>
+
+            <div class="modal-progress">
+                <div class="modal-progress-bar" id="progressBar"></div>
+            </div>
+
+            <form id="ticketForm">
+                <div class="form-step active" id="step1">
+                    <div class="form-group">
+                        <label for="name">Full name</label>
+                        <input type="text" id="name" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" class="form-control" required>
+                    </div>
+                    <div class="form-navigation">
+                        <button type="button" class="btn next-step">Next</button>
+                    </div>
+                </div>
+
+                <div class="form-step" id="step2">
+                    <div class="form-group">
+                        <label for="phone">Phone</label>
+                        <input type="tel" id="phone" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="ticketType">Select you Plan</label>
+                        <select id="ticketType" class="form-control" required>
+                            <option value="">Select a Plan</option>
+                            <option value="basic">Basic ($199)</option>
+                            <option value="standard">Pro ($399)</option>
+                            <option value="premium">Elite ($699)</option>
+                        </select>
+                    </div>
+
+                    <div class="form-navigation">
+                        <button type="button" class="btn prev-step">Back</button>
+                        <button type="button" class="btn next-step">Next</button>
+                    </div>
+                </div>
+
+                <div class="form-step" id="step3">
+                    <div class="form-group">
+                        <label for="cardNumber">Number Card</label>
+                        <input type="text" id="cardNumber" class="form-control" placeholder="1234 5678 9012 3456"
+                            required>
+                    </div>
+
+                    <div class="form-navigation">
+                        <button type="button" class="btn prev-step">Back</button>
+                        <button type="submit" class="btn complete-step">Complete Registration</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Modal Thank You -->
+    <div class="modal" id="thankYouModal">
+        <div class="modal-content thank-you-modal">
+            <i class="fas fa-check-circle"></i>
+            <h2>Thanks for your purchase</h2>
+            <p>Your payment has been processed successfully.</p>
+            <p>We will send you a confirmation email shortly.</p>
+            <button class="btn close-thankyou-page" id="closeThankYou">Close</button>
+        </div>
+    </div>
     <script src=" js/script.js"></script>
 </body>
 
