--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="hero-container">
             <div class="content">
                 <div class="left">
-                    <h2 class="fade-in">Lorem ipsum dolor sit amet.</h2>
+                    <h2 class="fade-in">Powered by Web 3.0</h2>
                     <h1 class="fade-in">Cyber<span>Tech</span>, the future is here and the Web 3.0</h1>
                     <p class="fade-in">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error commodi excepturi
                         eveniet
@@ -145,6 +145,52 @@
             </div>
         </div>
     </section>
+    <!-- Pricing -->
+    <section class="pricing" id="pricing">
+        <div class="pricing-container">
+            <div class="pricing-title fade-in">
+                <h2>Pricing</h2>
+            </div>
+            <div class="prices">
+                <div class="price fade-in">
+                    <h3>Free</h3>
+                    <p>$0</p>
+                    <ul>
+                        <li>Unlimited Access</li>
+                        <li>Unlimited Users</li>
+                        <li>Unlimited Projects</li>
+                        <li>Unlimited Storage</li>
+                        <li>Unlimited Support</li>
+                    </ul>
+                    <a href="#" class="btn open-modal">Select Plan</a>
+                </div>
+                <div class="price fade-in">
+                    <h3>Plus</h3>
+                    <p>$9</p>
+                    <ul>
+                        <li>Unlimited Access</li>
+                        <li>Unlimited Users</li>
+                        <li>Unlimited Projects</li>
+                        <li>Unlimited Storage</li>
+                        <li>Unlimited Support</li>
+                    </ul>
+                    <a href="#" class="btn open-modal">Select Plan</a>
+                </div>
+                <div class="price fade-in">
+                    <h3>Pro</h3>
+                    <p>$19</p>
+                    <ul>
+                        <li>Unlimited Access</li>
+                        <li>Unlimited Users</li>
+                        <li>Unlimited Projects</li>
+                        <li>Unlimited Storage</li>
+                        <li>Unlimited Support</li>
+                    </ul>
+                    <a href="#" class="btn open-modal">Select Plan</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -220,9 +266,9 @@
                         <label for="ticketType">Select you Plan</label>
                         <select id="ticketType" class="form-control" required>
                             <option value="">Select a Plan</option>
-                            <option value="basic">Basic ($199)</option>
-                            <option value="standard">Pro ($399)</option>
-                            <option value="premium">Elite ($699)</option>
+                            <option value="basic">Free ($0)</option>
+                            <option value="standard">Plus ($9)</option>
+                            <option value="premium">Pro ($19)</option>
                         </select>
                     </div>
 
