--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="asset/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -23,7 +24,7 @@
                 <a href="#about" class="nav-link">About</a>
                 <a href="#benefits" class="nav-link">Benefits</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="#comments" class="nav-link">Comments</a>
             </nav>
             <div class="cta">
                 <a href="#" class="btn open-modal">Get Started</a>
@@ -38,7 +39,7 @@
                 <a href="#about" class="nav-link">About</a>
                 <a href="#benefits" class="nav-link">Benefits</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="#coments" class="nav-link">Comments</a>
                 <a href="" class="nav-link open-modal">Get Started</a>
             </div>
         </div>
@@ -78,8 +79,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="rigth">
-                    <img src="img/hero.png" alt="hero-img">
+                <div class="right fade-in">
+                    <img src="asset/hero.png" alt="hero-img">
                 </div>
             </div>
         </div>
@@ -100,7 +101,7 @@
                     </p>
                 </div>
                 <div class="about-right fade-in">
-                    <img src="img/about.png" alt="about-img">
+                    <img src="asset/about.png" alt="about-img">
                 </div>
             </div>
         </div>
@@ -191,6 +192,66 @@
             </div>
         </div>
     </section>
+    <!-- Sección Comentarios -->
+    <section class="comments" id="Comments">
+        <div class="container">
+            <h2 class="section-title">Comments</h2>
+
+            <div class="testimonial-slider">
+                <div class="testimonial-track" id="testimonialTrack">
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Cliente"
+                                class="testimonial-avatar">
+                            <p class="testimonial-text">"This services are really useful. I recommend it to everyone."
+                            </p>
+                            <h4 class="testimonial-author">Carl Smith</h4>
+                            <p class="testimonial-role">Software Engineer</p>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Cliente"
+                                class="testimonial-avatar">
+                            <p class="testimonial-text">"The best utility I've ever used. Highly recommended, this is a
+                                game-changer!"</p>
+                            <h4 class="testimonial-author">Elena Hansen</h4>
+                            <p class="testimonial-role">Expert in Cybersecurity</p>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <img src="https://randomuser.me/api/portraits/men/62.jpg" alt="Cliente"
+                                class="testimonial-avatar">
+                            <p class="testimonial-text">"I'm impressed with the quality of this service. It's a
+                                game-changer!"</p>
+                            <h4 class="testimonial-author">Javier López</h4>
+                            <p class="testimonial-role">Senior Developer</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slider-nav">
+                    <button class="slider-btn prev-btn" id="prevBtn">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <button class="slider-btn next-btn" id="nextBtn">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Convert section-->
+    <section class="convert">
+        <div class="convert-container">
+            <h2>Are you ready to next level in Cybersecurity?</h2>
+            <p>Join our community and unlock the power of cybersecurity</p>
+            <a href="" class="btn open-modal">Start Now</a>
+        </div>
+    </section>
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -211,7 +272,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#benefits">Benefits</a></li>
                         <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#commets">Comments</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
